@@ -30,6 +30,7 @@
   as argument (#170; based on patch by Scott Bailey)
 - msvs2005prj: fixed handling of include and library paths with spaces
 - msvc6prj: fixed to not use minimal rebuild with optimization (#42)
+- autoconf: call AC_BAKEFILE_PROG_CC/CXX from AC_BAKEFILE (#64)
 
 
 Version 0.2.2
